--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,19 @@
-boto3==1.12.11
+# pip install aws-cdk
+aws-cdk.core==1.22.0
+aws-cdk.aws-ec2==1.22.0
+aws-cdk.aws-iam==1.22.0
+aws-cdk.aws-lambda==1.22.0
+aws-cdk.aws-lambda-event-sources==1.22.0
+aws-cdk.aws-s3==1.22.0
+aws-cdk.aws-kinesis==1.22.0
+aws-cdk.aws-kinesisfirehose==1.22.0
+aws-cdk.aws-elasticsearch==1.22.0
+
+# pip install boto3
+boto3==1.14.13
+botocore==1.17.13
+
+# pip install elasticsearch
 elasticsearch==7.0.5
 requests==2.23.0
 requests-aws4auth==0.9
