--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,8 @@ aws-cdk.aws-s3==1.22.0
 aws-cdk.aws-kinesis==1.22.0
 aws-cdk.aws-kinesisfirehose==1.22.0
 aws-cdk.aws-elasticsearch==1.22.0
+aws-cdk.aws-events==1.22.0
+aws-cdk.aws-events-targets==1.22.0
 
 # pip install boto3
 boto3==1.14.13
